Quick fix for spotless (#324)